Added HTML to show scores

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<title>barricade</title>
+	<h1>Barricade</h1>
+	<div class="row">
+		<div class="column">Player1:<span id="p1Score"></span></div>
+		<div class="column">Player2:<span id="p2Score"></span></div>
+	</div>
 </head>
 <body>
 	<script type="text/javascript" src="libraries/p5.js"></script>
