--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>barricade</title>
+	<link href="styles.css" type="text/css" rel="stylesheet">
+	<title>Barricade</title>
 	<h1>Barricade</h1>
 	<div class="row">
 		<div class="column">Player1:<span id="p1Score"></span></div>
